--- a/frontend/dashboard/src/app/views/pages/sea-dashboard/sea-dashboard.component.html
+++ b/frontend/dashboard/src/app/views/pages/sea-dashboard/sea-dashboard.component.html
@@ -317,8 +317,33 @@
                             >Count</mat-header-cell
                           >
                           <mat-cell *matCellDef="let element">
-                            <!-- Add click event and pass the action value to the function -->
-                            <a
+                            <ng-container
+                              *ngIf="element.count > 0; else noData"
+                            >
+                              <!-- Display count and provide click event if count is greater than 0 -->
+                              <a
+                                href="javascript:void(0);"
+                                (click)="
+                                  get_export_documentation_Count_details_navigation(
+                                    element.action
+                                  )
+                                "
+                              >
+                                {{ element.count }}
+                              </a>
+                            </ng-container>
+                            <!-- If count is 0, display 'No data found' message -->
+                            <ng-template #noData> No data found </ng-template>
+                          </mat-cell>
+                        </ng-container>
+
+                        <!-- <ng-container matColumnDef="count">
+                          <mat-header-cell *matHeaderCellDef
+                            >Count</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element"> -->
+                        <!-- Add click event and pass the action value to the function -->
+                        <!-- <a
                               href="javascript:void(0);"
                               (click)="
                                 get_export_documentation_Count_details_navigation(
@@ -328,9 +353,34 @@
                               >{{ element.count }}</a
                             >
                           </mat-cell>
-                        </ng-container>
+                        </ng-container> -->
 
                         <ng-container matColumnDef="countSLA">
+                          <mat-header-cell *matHeaderCellDef
+                            >Within SLA</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element">
+                            <ng-container
+                              *ngIf="element.withinSLA !== 0; else noDataFound"
+                            >
+                              <a
+                                href="javascript:void(0);"
+                                (click)="
+                                  get_export_documentation_details_Withinsla_navigation(
+                                    element.action,
+                                    element.withinSLA
+                                  )
+                                "
+                                >{{ element.withinSLA }}</a
+                              >
+                            </ng-container>
+                            <ng-template #noDataFound
+                              >No data found</ng-template
+                            >
+                          </mat-cell>
+                        </ng-container>
+
+                        <!-- <ng-container matColumnDef="countSLA">
                           <mat-header-cell *matHeaderCellDef
                             >Within SLA</mat-header-cell
                           >
@@ -346,9 +396,35 @@
                               >{{ element.withinSLA }}</a
                             >
                           </mat-cell>
-                        </ng-container>
+                        </ng-container> -->
 
                         <ng-container matColumnDef="countOSLA">
+                          <mat-header-cell *matHeaderCellDef
+                            >Out of SLA</mat-header-cell
+                          >
+                          <mat-cell *matCellDef="let element">
+                            <ng-container
+                              *ngIf="element.outOfSLA !== 0; else noDataFound"
+                            >
+                              <a
+                                href="javascript:void(0);"
+                                (click)="
+                                  get_export_documentation_details_OutOfSla_navigation(
+                                    element.action,
+                                    element.withinSLA,
+                                    element.outOfSLA
+                                  )
+                                "
+                                >{{ element.outOfSLA }}</a
+                              >
+                            </ng-container>
+                            <ng-template #noDataFound
+                              >No data found</ng-template
+                            >
+                          </mat-cell>
+                        </ng-container>
+
+                        <!-- <ng-container matColumnDef="countOSLA">
                           <mat-header-cell *matHeaderCellDef>
                             Out of SLA</mat-header-cell
                           >
@@ -365,7 +441,7 @@
                               >{{ element.outOfSLA }}</a
                             >
                           </mat-cell>
-                        </ng-container>
+                        </ng-container> -->
                         <mat-header-row
                           *matHeaderRowDef="displayedColumnsSLA"
                         ></mat-header-row>
